--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,8 @@
 # /dev-api 为本地 mock 地址，不使用 mock 的话此处换为你的开发环境接口地址.
 # 开发环境
 # 质量技术平台 https://uwdp-api-dev.htpc.com.cn
-VITE_BASE_API = 'https://uwdp-api-dev.htpc.com.cn'
+VITE_BASE_API = 'https://34p024o479.imdo.co/'
+# https://34p024o479.imdo.co/
 # 开发环境启用 cdn eruda 调试工具。若不启用，将 true 修改为 false 或其他任意值即可
 VITE_ENABLE_ERUDA = "true"
 
